# stb1

./: Dockerfile  README.md
dashboard/: nginx.conf  package-lock.json  package.json
dashboard/src/components/: ActiveTradesPanel.tsx  Dashboard.tsx  TokenDiscoveryPanel.tsx
database/: schema.sql
docker/: docker-compose.yml  prometheus.yml
rust-engine/: Cargo.toml  Dockerfile
rust-engine/src/: config.rs  lib.rs  logging.rs  main.rs  models.rs
rust-engine/src/database/: connection.rs  mod.rs
rust-engine/src/trading/: entry.rs  mod.rs
src/: App.tsx
typescript-api/: Dockerfile  package.json
typescript-api/src/: index.ts
typescript-api/src/config/: database.ts  index.ts
typescript-api/src/models/: index.ts
typescript-api/src/services/: discovery.ts  execution.ts  market-data.ts
typescript-api/src/utils/: logger.ts
