[package]
name = "solana-trading-bot-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "decimal", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
decimal = { version = "3.0", features = ["serde"] }
uuid = { version = "1.5", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
crossbeam = "0.8"
dashmap = "5.5"
async-trait = "0.1"
parking_lot = "0.12"
rust_decimal_macros = "1.0"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"

[[bench]]
name = "trading_engine"
harness = false